--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
     <title>Global Bouldering</title>
   </head>
 
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="boulders.html"> Boulders </a>
+      <a href="leaderboard.html"> Leaderboard </a>
+      <a href="aboutus.html"> About us </a>
+    </div>
+
     <h1>What is this</h1>
     <p>Global Bouldering is a collections of boulders, with maps, descriptions, videos, ranks. Global Bouldering is a community, linking people around the globe.</p>
-
-    <h1>Boulders</h1>
-      
-      <h2>Città dei Sassi</h2>
-
-        <ol>
-          <li>Beautiful Mind</li>
-          <li>Cash in, crash out</li>
-          <li>Don't think about it</li>
-        </ol>
 
   </body>
 
