--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,13 @@
       <a href="boulders.html"> About us </a>
     </div>
     
-	<h1>TO DO</h1>
+	<img src="images/aboutus/checco.jpeg" alt="Un gay" width=300>
+	<p>Checco, Rimini, 23 anni, gay (comunque più forte di squadra).</p>
+
+	<img src="images/aboutus/eagle.jpeg" alt="Eagle" width=300>
+	<p>Eagle, Rimini, 23 anni (si dissocia dal gay).</p>
+
+	<img src="images/aboutus/squadra.jpeg" alt="Squadra" width=300>
+	<p>Squadra, Rimini, 23 anni.</p>
 </body>
 </html>
