--- a/aboutus.html
+++ b/aboutus.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-	<div>
-      <a href="index.html">Home</a>
-      <a href="boulders.html"> Boulders </a>
-      <a href="leaderboard.html"> Leaderboard </a>
-      <a href="boulders.html"> About us </a>
-    </div>
+    <div>
+		<a href="index.html">Home</a>
+		<a href="boulders.html"> Boulders </a>
+		<a href="leaderboard.html"> Leaderboard </a>
+		<a href="aboutus.html"> About us </a>
+	</div>
     
 	<img src="images/aboutus/checco.jpeg" alt="Un gay" width=300>
 	<p>Checco, Rimini, 23 anni, gay (comunque più forte di squadra).</p>
