--- a/boulders.html
+++ b/boulders.html
@@ -10,12 +10,12 @@
 
 <body>
 	
-	<div>
-      <a href="index.html">Home</a>
-      <a href="boulders.html"> Boulders </a>
-      <a href="leaderboard.html"> Leaderboard </a>
-      <a href="boulders.html"> About us </a>
-    </div>
+    <div>
+		<a href="index.html">Home</a>
+		<a href="boulders.html"> Boulders </a>
+		<a href="leaderboard.html"> Leaderboard </a>
+		<a href="aboutus.html"> About us </a>
+	</div>
 
 	<h1>Boulders</h1>
     
