--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-	<div>
-      <a href="index.html">Home</a>
-      <a href="boulders.html"> Boulders </a>
-      <a href="leaderboard.html"> Leaderboard </a>
-      <a href="boulders.html"> About us </a>
-    </div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="boulders.html"> Boulders </a>
+    <a href="leaderboard.html"> Leaderboard </a>
+    <a href="aboutus.html"> About us </a>
+  </div>
     
 	<h1>TO DO</h1>
 </body>
