--- a/aboutus.html
+++ b/aboutus.html
@@ -14,10 +14,10 @@
 	</div>
     
 	<img src="images/aboutus/checco.jpeg" alt="Un gay" width=300>
-	<p>Checco, Rimini, 23 anni, gay (comunque più forte di squadra).</p>
+	<p>Checco, Rimini, 23 anni.</p>
 
 	<img src="images/aboutus/eagle.jpeg" alt="Eagle" width=300>
-	<p>Eagle, Rimini, 23 anni (si dissocia dal gay).</p>
+	<p>Eagle, Rimini, 23 anni.</p>
 
 	<img src="images/aboutus/squadra.jpeg" alt="Squadra" width=300>
 	<p>Squadra, Rimini, 23 anni.</p>
