added contribute section

--- a/boulders.html
+++ b/boulders.html
@@ -11,11 +11,12 @@
 <body>
 	
     <div>
-		<a href="index.html">Home</a>
-		<a href="boulders.html"> Boulders </a>
-		<a href="leaderboard.html"> Leaderboard </a>
-		<a href="aboutus.html"> About us </a>
-	</div>
+      <a href="index.html">Home</a>
+      <a href="boulders.html"> Boulders </a>
+      <a href="contribute.html"> Boulders </a>
+      <a href="leaderboard.html"> Leaderboard </a>
+      <a href="aboutus.html"> About us </a>
+    </div>
 
 	<h1>Boulders</h1>
     
