--- a/aboutus.html
+++ b/aboutus.html
@@ -7,11 +7,12 @@
 <body>
 
     <div>
-		<a href="index.html">Home</a>
-		<a href="boulders.html"> Boulders </a>
-		<a href="leaderboard.html"> Leaderboard </a>
-		<a href="aboutus.html"> About us </a>
-	</div>
+      <a href="index.html">Home</a>
+      <a href="boulders.html"> Boulders </a>
+      <a href="contribute.html"> Boulders </a>
+      <a href="leaderboard.html"> Leaderboard </a>
+      <a href="aboutus.html"> About us </a>
+    </div>
     
 	<img src="images/aboutus/checco.jpeg" alt="Un gay" width=300>
 	<p>Checco, Rimini, 23 anni.</p>
