--- a/contribute.html
+++ b/contribute.html
@@ -1,19 +1,22 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Leaderboard</title>
-</head>
-<body>
 
-  <div>
+  <head>
+    <meta charset="utf-8">
+    <title>Global Bouldering</title>
+  </head>
+
+  <body>
+
+    <div>
       <a href="index.html">Home</a>
       <a href="boulders.html"> Boulders </a>
       <a href="contribute.html"> Boulders </a>
       <a href="leaderboard.html"> Leaderboard </a>
       <a href="aboutus.html"> About us </a>
-  </div>
+    </div>
+
+    <h1>TO DO</h1>
     
-	<h1>TO DO</h1>
-</body>
+  </body>
+
 </html>
