--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <div>
       <a href="index.html">Home</a>
       <a href="boulders.html"> Boulders </a>
+      <a href="contribute.html"> Boulders </a>
       <a href="leaderboard.html"> Leaderboard </a>
       <a href="aboutus.html"> About us </a>
     </div>
 
     <h1>What is this</h1>
-    <p>Global Bouldering is a collections of boulders, with maps, descriptions, videos, ranks. Global Bouldering is a community, linking people around the globe.</p>
+    <p>Global Bouldering is a community of climbers all around the world, sharing one simple idea: make money.</p>
 
   </body>
 
