--- a/boulders.html
+++ b/boulders.html
@@ -13,7 +13,7 @@
     <div>
       <a href="index.html">Home</a>
       <a href="boulders.html"> Boulders </a>
-      <a href="contribute.html"> Boulders </a>
+      <a href="contribute.html"> Contribute </a>
       <a href="leaderboard.html"> Leaderboard </a>
       <a href="aboutus.html"> About us </a>
     </div>
@@ -23,7 +23,7 @@
     	<h2>Città dei Sassi</h2>
 
 	        <ol>
-	          <li>Beautiful Mind</li>
+	          <li><a href="boulders/b2.html">Beautiful Mind</a></li>
 	          <li>Cash in, crash out</li>
 	          <li>Don't think about it</li>
 	        </ol>
