--- a/boulders/b2.html
+++ b/boulders/b2.html
@@ -1,5 +1,3 @@
-<!doctype html>
-
 <html>
 
   <head>
@@ -17,9 +15,9 @@
       <a href="aboutus.html"> About us </a>
     </div>
 
-    <h1>What is this</h1>
-    <p>Global Bouldering is a community of climbers all around the world, sharing one simple idea: make money.</p>
-
+    <h1>Beautiful Mind</h1>
+    <img src="../images/boulders/b2.jpg" alt="Image Unavailable" width=600>
+    
   </body>
 
 </html>
