--- a/contribute.html
+++ b/contribute.html
@@ -10,7 +10,7 @@
     <div>
       <a href="index.html">Home</a>
       <a href="boulders.html"> Boulders </a>
-      <a href="contribute.html"> Boulders </a>
+      <a href="contribute.html"> Contribute </a>
       <a href="leaderboard.html"> Leaderboard </a>
       <a href="aboutus.html"> About us </a>
     </div>
